# endo-da3

./: .gitignore  NOTICE  README.md  pyproject.toml
endo_da3/: __init__.py  backbone.py  lora.py  loss.py  model.py
endo_da3/_vendor/: __init__.py  cam_enc.py  dpt.py  dualdpt.py  geometry.py
endo_da3/_vendor/dinov2/: vision_transformer.py
endo_da3/data/: __init__.py  base.py  c3vd.py  endoslam.py  hamlyn.py  loaders.py  mirocam.py  pillcam.py  polypsense3d.py  polypsense3d_clinical.py  scared.py  simcol3d.py  stereomis.py
scripts/: download_c3vd.sh  download_polypsense3d.sh  extract_endoslam.sh  extract_polypsense3d.sh
tests/: _check_shapes.py  _test_posembed.py  eval_checkpoints_scared.py  eval_checkpoints_serv_ct.py  gastronet_test.py  test_da3_dino.py  test_depth.py  test_hamlyn_reprojection.py  test_multiview.py  test_stage1_smoke.py
tools/: compare_kinematic_raft.py  compare_raft_models.py  compare_raft_scared.py  eval_scared.py  eval_serv_ct.py  extract_scared.py  extract_scared_video.py  extract_stereomis.py  generate_hamlyn_pseudogt.py  generate_stereomis_pseudogt.py  vis_scared.py  vis_serv_ct.py
train/: stage1.py  stage2a.py  stage2b.py  stage2b_distill.py  stage3.py
